# HomeWork_27

./: db.sqlite3  manage.py  pyproject.toml
HomeWork_27/: asgi.py  settings.py  urls.py  wsgi.py
abs/: apps.py  models.py  views.py
abs/migrations/: 0001_initial.py  0002_categories_status.py  0003_delete_categories.py  0004_alter_abs_id.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_categories_id.py
