[tool.poetry]
name = "homework-27"
version = "0.1.0"
description = ""
authors = ["egorarhipov <arhipov_0406@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
